# bitmex-warrior

./: .gitignore  .travis.yml  Cargo.toml  README.md  app.toml.template  log4rs.yaml
src/: behaviour.rs  command.rs  lib.rs  main.rs  model.rs  orchestrator.rs  render.rs  rest.rs  rest_model.rs  sign.rs  ws.rs  ws_handler.rs  ws_model.rs
tests/: test_behaviour.rs  test_models.rs  test_orchestrator.rs  test_render.rs  test_ws_model.rs
