[package]
name = "bitmex-warrior"
version = "0.1.0"
authors = ["KS <ks@gmail.com>"]
edition = "2018"
default-run = "main"

[dependencies]
termion = "1.5.6"
crossterm = "0.19.0"
enum-display-derive = "*"
log = "*"
env_logger = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
tungstenite = "0.13.0"
bitmex = "0.2"
ring = "0.16"
hex = "0.4"
config = "0.10"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
urlencoding = {version = "1.1.1" }
log4rs = "*"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"