[package]
name = "bitmex-warrior"
version = "0.1.0"
authors = ["KS <ks@gmail.com>"]
edition = "2018"
default-run = "main"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
config = "0.10"
enum-display-derive = "0.1"
hex = "0.4"
lazy_static = "1.4"
log = "*"
log4rs = "1.0"
termion = "1.5.6"
ring = "0.16"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.13.0"
urlencoding = {version = "1.1.1" }
uuid = { version = "0.8", features = ["serde", "v4"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"